--- a/lahiye.css
+++ b/lahiye.css
@@ -14,7 +14,7 @@ body {
     border: 1px solid #C4C4C4;
     border-radius: 10px;
 
-    width: 40%;
+    width: 30%;
     margin: auto;
     padding-bottom: 20px;
 }
@@ -36,6 +36,7 @@ input {
     width: 80%;
     margin-left: 10%;
     margin-bottom: 20px;
+    
 }
 
 input:hover {
@@ -99,6 +100,7 @@ ul li {
     text-align: center;
     padding-top: 7px;
     background-color: white;
+    overflow: hidden;   
 }
 
 ul li:hover {
@@ -117,10 +119,13 @@ ul li:hover {
     margin-right: 5px;
     font-weight: 900;
 }
-
 .close:hover {
     background-color: rgba(0, 0, 0, 0.295);
     color: rgba(0, 0, 0, 0.836);
     border-color: rgba(0, 0, 0, 0.836);
-
+}
+img:hover{
+    background-color: gray;
+    border-radius: 2px;
+    padding: 2px;
 }
